; ModuleID = '/home/carl/AnghaBench/libevent/extr_event.c_event_debug_unassign.c'
source_filename = "/home/carl/AnghaBench/libevent/extr_event.c_event_debug_unassign.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.event = type { i32 }

@EVLIST_INIT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @event_debug_unassign(%struct.event* %0) #0 {
  %2 = alloca %struct.event*, align 8
  store %struct.event* %0, %struct.event** %2, align 8
  %3 = load %struct.event*, %struct.event** %2, align 8
  %4 = call i32 @event_debug_assert_not_added_(%struct.event* %3)
  %5 = load %struct.event*, %struct.event** %2, align 8
  %6 = call i32 @event_debug_note_teardown_(%struct.event* %5)
  %7 = load i32, i32* @EVLIST_INIT, align 4
  %8 = xor i32 %7, -1
  %9 = load %struct.event*, %struct.event** %2, align 8
  %10 = getelementptr inbounds %struct.event, %struct.event* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = and i32 %11, %8
  store i32 %12, i32* %10, align 4
  ret void
}

declare dso_local i32 @event_debug_assert_not_added_(%struct.event*) #1

declare dso_local i32 @event_debug_note_teardown_(%struct.event*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
